--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,36 @@
-version: 2.1
-
-orbs:
-  android: circleci/android@0.2.0
-
+version: 2
 jobs:
   build:
-    executor: android/android
-
+    working_directory: ~/code
+    docker:
+      - image: circleci/android:api-25-alpha
+    environment:
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      #      - run:
+      #         name: Chmod permissions #if permission for Gradlew Dependencies fail, use this.
+      #         command: sudo chmod +x ./gradlew
       - run:
-          command: ./gradlew build
+          name: Accept licenses
+          command: yes | sdkmanager --licenses || true
+      - run:
+          name: Download Dependencies
+          command: ./gradlew androidDependencies
+      - save_cache:
+          paths:
+            - ~/.gradle
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      - run:
+          name: Run Tests
+          command: ./gradlew lint test
+      - run:
+          name: Build application
+          command: ./gradlew assemble
+
+      - store_artifacts:
+          path: app/build/outputs/apk
+          destination: apk
+
