--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -34,3 +34,39 @@ jobs:
           path: app/build/outputs/apk
           destination: apk
 
+  test:
+    docker:
+      - image: circleci/android:api-28-alpha  # gcloud is baked into this image
+    steps:
+      - checkout
+      - run:
+          name: Build debug APK and release APK
+          command: |
+            ./gradlew :app:assembleDebug
+            ./gradlew :app:assembleDebugAndroidTest
+      - run:
+          name: Store Google Service Account
+          command: echo $IntegDEVAPPS > ${HOME}/gcloud-service-key.json
+      - run:
+          name: Authorize gcloud and set config defaults
+          command: |
+            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            sudo gcloud --quiet config set project ${IntegProjectID}
+      - run:
+          name: Test with Firebase Test Lab
+          command: >
+            sudo gcloud firebase test android run \
+              --app app/build/outputs/apk/debug/app-debug.apk \
+              --results-bucket cloud-test-${IntegProjectID}
+
+     -  workflows:
+        build_and_test:
+          jobs:
+            - build
+            - test:
+                requires:
+                  - build
+                filters:
+                  branches:
+                    only: master
+
