--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2
+version: 2.1
 jobs:
   build:
     working_directory: ~/code
@@ -36,7 +36,7 @@ jobs:
 
   test:
     docker:
-      - image: circleci/android:api-ƒ-alpha  # gcloud is baked into this image
+      - image: circleci/android:api-29-alpha  # gcloud is baked into this image
     steps:
       - checkout
       - run:
@@ -60,7 +60,7 @@ jobs:
               --results-bucket cloud-test-${IntegProjectID}
 
 workflows:
-  version: 2
+  version: 2.1
   build_and_test:
     jobs:
       - build
