teste de adicao

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
       - run:
           name: Authorize gcloud and set config defaults
           command: |
-
+            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             sudo gcloud --quiet config set project ${IntegProjectID}
       - run:
           name: Test with Firebase Test Lab
