--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/code
     docker:
-      - image: circleci/android:api-25-alpha
+      - image: circleci/android:api-29
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
@@ -35,7 +35,7 @@ jobs:
           destination: apk
 
   test:
-      - image: circleci/android:api-28-alpha  # gcloud is baked into this image
+      - image: circleci/android:api-29  # gcloud is baked into this image
     steps:
       - checkout
       - run:
@@ -45,11 +45,11 @@ jobs:
             ./gradlew :app:assembleDebugAndroidTest
       - run:
           name: Store Google Service Account
-          command: echo $IntegDEVAPPS > ${HOME}/gcloud-service-key.json
+          command: echo $IntegDEVAPPS | gcloud auth activate-service-account --key-file=-
       - run:
           name: Authorize gcloud and set config defaults
           command: |
-            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            sudo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
             sudo gcloud --quiet config set project ${IntegProjectID}
       - run:
           name: Test with Firebase Test Lab
