--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,4 +1,4 @@
-version: 2.1
+version: 2
 jobs:
   build:
     working_directory: ~/code
@@ -35,7 +35,6 @@ jobs:
           destination: apk
 
   test:
-    docker:
       - image: circleci/android:api-29  # gcloud is baked into this image
     steps:
       - checkout
@@ -46,11 +45,11 @@ jobs:
             ./gradlew :app:assembleDebugAndroidTest
       - run:
           name: Store Google Service Account
-          command: echo $IntegDEVAPPS | gcloud auth activate-service-account --key-file=-
+          command: echo $IntegDEVAPPS > ${HOME}/gcloud-service-key.json
       - run:
           name: Authorize gcloud and set config defaults
           command: |
-            sudo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
+            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
             sudo gcloud --quiet config set project ${IntegProjectID}
       - run:
           name: Test with Firebase Test Lab
@@ -59,15 +58,14 @@ jobs:
               --app app/build/outputs/apk/debug/app-debug.apk \
               --results-bucket cloud-test-${IntegProjectID}
 
-workflows:
-  version: 2.1
-  build_and_test:
-    jobs:
-      - build
-      - test:
-          requires:
+     -  workflows:
+        build_and_test:
+          jobs:
             - build
-          filters:
-            branches:
-              only: master
+            - test:
+                requires:
+                  - build
+                filters:
+                  branches:
+                    only: master
 
