--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,11 +46,11 @@ jobs:
             ./gradlew :app:assembleDebugAndroidTest
       - run:
           name: Store Google Service Account
-          command: echo $IntegDEVAPPS > ${HOME}/gcloud-service-key.json
+          command: echo $IntegDEVAPPS > ${HOME}/zinc-hour-261214-a245c1a92551.json
       - run:
           name: Authorize gcloud and set config defaults
           command: |
-            sudo gcloud auth activate-service-account --key-file=${HOME}/gcloud-service-key.json
+            sudo gcloud auth activate-service-account --key-file=${HOME}/zinc-hour-261214-a245c1a92551.json
             sudo gcloud --quiet config set project ${IntegProjectID}
       - run:
           name: Test with Firebase Test Lab
