mudanca de caminho

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,12 +45,9 @@ jobs:
             ./gradlew :app:assembleDebug
             ./gradlew :app:assembleDebugAndroidTest
       - run:
-          name: Store Google Service Account
-          command: echo $IntegDEVAPPS > ${HOME}/zinc-hour-261214-a245c1a92551.json
-      - run:
           name: Authorize gcloud and set config defaults
           command: |
-            sudo gcloud auth activate-service-account --key-file=${HOME}/zinc-hour-261214-a245c1a92551.json
+            sudo gcloud auth activate-service-account --key-file=${HOME}/.circleci/zinc-hour-261214-a245c1a92551.json
             sudo gcloud --quiet config set project ${IntegProjectID}
       - run:
           name: Test with Firebase Test Lab
