--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,6 +36,7 @@ jobs:
 
   test:
     docker:
+      - image: google/cloud-sdk
       - image: circleci/android:api-29  # gcloud is baked into this image
     steps:
       - checkout
