--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -55,7 +55,7 @@ jobs:
           command: >
             sudo gcloud firebase test android run \
               --app app/build/outputs/apk/debug/app-debug.apk \
-              --results-bucket cloud-test ${IntegProjectID}
+              --results-bucket cloud-test ${IntegProjectID} \
 
 workflows:
   version: 2.1
