--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -56,8 +56,8 @@ jobs:
             sudo gcloud firebase test android run \
              --app app/build/outputs/apk/debug/app-debug.apk \
                           --type instrumentation \
-                          --app app-debug-unaligned.apk \
-                          --test app-debug-test-unaligned.apk \
+                          --app app/build/outputs/apk/debug/app-debug-unaligned.apk \
+                          --test app/build/outputs/apk/debug/app-debug-test-unaligned.apk \
                           --device model=Nexus6,version=21,locale=en,orientation=portrait  \
                           --device model=Nexus7,version=19,locale=fr,orientation=landscape
 
