--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,8 +58,7 @@ jobs:
                           --type instrumentation \
                           --app app/build/outputs/apk/debug/app-debug.apk \
                           --test app/build/outputs/apk/androidTest/debug/app-debug-androidTest.apk \
-                          --device model=Nexus6,version=21,locale=en,orientation=portrait  \
-                          --device model=Nexus7,version=19,locale=fr,orientation=landscape
+                          --device model=Pixel 2,version=26,locale=en,orientation=portrait
 
 
 workflows:
